fix: responsive on mobile device

--- a/src/css/pages/Chord.css
+++ b/src/css/pages/Chord.css
@@ -154,7 +154,7 @@
   flex-direction: column;
   padding: 0 0.5rem 0.5rem 0.5rem;
   width: 100%;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   height: 100%;
 }
 
